--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -28,6 +28,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/tv_section"
+        android:layout_marginRight="8dp"
         android:text="@string/text_view_by"
         android:textSize="14sp" />
 
