--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -28,6 +28,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/tv_section"
+        android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:text="@string/text_view_by"
         android:textSize="14sp" />
@@ -37,6 +38,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/tv_section"
+        android:layout_toEndOf="@id/tv_by"
         android:layout_toRightOf="@id/tv_by"
         android:textSize="14sp"
         android:textStyle="italic"
@@ -48,6 +50,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/tv_section"
+        android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:textSize="14sp"
         tools:text="@string/tools_date" />
